<?xml version="1.0"?>
<package>
	<name>occupancy_detection</name>
	<version>1.0.0</version>
	<description>This ROS package provides a node and library that can be used to detect when something enters or moves inside a given 3D region.</description>
	<author email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</author>
	<maintainer email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</maintainer>
	<license>BSD</license>


	<buildtool_depend>catkin</buildtool_depend>


	<!-- ################################################################## -->
	<!-- Build dependencies -->
	<!-- ################################################################## -->

	<build_depend>cmake_modules</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>pcl_conversions</build_depend>
	<build_depend>pcl_ros</build_depend>
	<build_depend>rosconsole</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rostime</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>tf2</build_depend>
	<build_depend>tf2_ros</build_depend>
	<build_depend>xmlrpcpp</build_depend>

	<build_depend>Boost</build_depend>
	<build_depend>eigen</build_depend>
	<build_depend>libpcl-dev</build_depend>


	<!-- ################################################################## -->
	<!-- Run dependencies -->
	<!-- ################################################################## -->

	<run_depend>cmake_modules</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>pcl_conversions</run_depend>
	<run_depend>pcl_ros</run_depend>
	<run_depend>rosconsole</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>rostime</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>tf2</run_depend>
	<run_depend>tf2_ros</run_depend>
	<run_depend>xmlrpcpp</run_depend>

	<run_depend>Boost</run_depend>
	<run_depend>eigen</run_depend>
	<run_depend>libpcl-dev</run_depend>


	<export>
		<rosdoc config="rosdoc.yaml" />
	</export>
</package>
