<?xml version="1.0"?>
<package format="2">
	<name>occupancy_detection</name>
	<version>1.0.0</version>
	<description>This ROS package provides a node and library that can be used to detect when something enters or moves inside a given 3D region.</description>
	<author email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</author>
	<maintainer email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>geometry_msgs</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>
	<depend>rosconsole</depend>
	<depend>roscpp</depend>
	<depend>rostime</depend>
	<depend>sensor_msgs</depend>
	<depend>std_msgs</depend>
	<depend>tf2</depend>
	<depend>tf2_ros</depend>
	<depend>visualization_msgs</depend>
	<depend>xmlrpcpp</depend>
	<depend>libboost-all-dev</depend>
	<depend>libeigen3-dev</depend>
	<depend>PCL</depend>
</package>
